<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="8dp"
    android:padding="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/carImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <!-- Description, gas and color text -->
        <TextView
            android:id="@+id/carDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/carGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_gas"
                android:drawablePadding="2dp"
                android:text="@string/CarGas" />

            <TextView
                android:id="@+id/carColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_color_pick"
                android:drawablePadding="2dp"
                android:text="@string/CarColor" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>